Partial implementation of createNewConversatoin method
